Changed file externals to SVN externals.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9503 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_10.vcxproj
+++ b/TorrentWizard/TorrentWizard_10.vcxproj
@@ -236,9 +236,9 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\shareaza\BENode.cpp" />
-    <ClCompile Include="..\shareaza\Buffer.cpp" />
-    <ClCompile Include="..\shareaza\Strings.cpp" />
+    <ClCompile Include="BENode.cpp" />
+    <ClCompile Include="Buffer.cpp" />
+    <ClCompile Include="Strings.cpp" />
     <ClCompile Include="CmdLine.cpp" />
     <ClCompile Include="PageComment.cpp" />
     <ClCompile Include="PageFinished.cpp" />
@@ -258,9 +258,9 @@
     <ClCompile Include="WizardSheet.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\shareaza\BENode.h" />
-    <ClInclude Include="..\shareaza\Buffer.h" />
-    <ClInclude Include="..\shareaza\Strings.h" />
+    <ClInclude Include="BENode.h" />
+    <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Strings.h" />
     <ClInclude Include="CmdLine.h" />
     <ClInclude Include="PageComment.h" />
     <ClInclude Include="PageFinished.h" />
